--- a/responsive.css
+++ b/responsive.css
@@ -1,5 +1,4 @@
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (min-width: 500px) and (max-width: 700px) {
+@media only screen and (min-width: 500px) and (max-width: 900px) {
     .header{
         text-align: center;
         margin: 50px 0;
@@ -101,5 +100,12 @@
     }
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {...}
+
+@media only screen and (min-width: 900px) and (max-width: 1100px){
+    .images .img{
+        width: 200px;
+    }
+    .g-item img{
+        width: 190px;
+    }
+}
