--- a/responsive.css
+++ b/responsive.css
@@ -17,8 +17,11 @@
         margin: 0;
         padding: 0;
     }
-    .h-right p{
+    .h-right a{
         margin: 10px 0;
+    }
+    .h-logo{
+        justify-content: center;
     }
 
     .banner{
@@ -37,12 +40,16 @@
     .images .img{
         width: 300px;
         margin: auto;
+        margin-top: 70px;
     }
     .g-item img{
         width: 250px;
     }
 
 
+    .play{
+        margin-top: 100px;
+    }
     .p-items{
         display: block;
     }
@@ -55,6 +62,7 @@
     }
     .p-right .p-1 {
         width: 280px;
+        margin-top: 50px;
     }
 
 
@@ -124,10 +132,12 @@
         margin: 0;
         padding: 0;
     }
-    .h-right p{
+    .h-right a{
         margin: 10px 0;
     }
-
+    .h-logo{
+        justify-content: center;
+    }
     .banner{
         text-align: center;
         padding-top: 30px;
@@ -144,12 +154,15 @@
     .images .img{
         width: 400px;
         margin: auto;
+        margin-top: 70px;
     }
     .g-item img{
         width: 370px;
     }
 
-
+    .play{
+        margin-top: 100px;
+    }
     .p-items{
         display: block;
     }
@@ -162,6 +175,7 @@
     }
     .p-right .p-1 {
         width: 400px;
+        margin-top: 50px;
     }
 
 
