--- a/style.css
+++ b/style.css
@@ -25,6 +25,17 @@ span{
     display: flex;
     align-items: center;
 }
+.h-right a{
+    text-decoration: none;
+    color: #000;
+    margin-left: 20px;
+    display: flex;
+    justify-content: center;
+}
+.h-right a:hover{
+    background-color: rgb(223, 229, 235);
+    border-radius: 5px;
+}
 .h-right p{
     margin-left: 20px;
     margin-right: 5px;
@@ -180,6 +191,9 @@ span{
     color: white;
     margin: 0 15px;
 }
+.f-links a:hover{
+    color: #999595;
+}
 .f-medea{
     margin: 30px 0;
 }
@@ -196,6 +210,9 @@ span{
     font-size: 17px;
     color: rgb(186, 186, 186);
     margin: 0 15px;
+}
+.f-policy a:hover{
+    color: #fff;
 }
 .copy-right{
     display: flex;
